updated the transition from custom to preset to hopefully fix the bug where the inputs can be accessed even when not visible on safari

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1740,12 +1740,13 @@ key {
   .tabContent {
     overflow: hidden;
     height: auto;
-    max-height: 0px;
+    // max-height: 0px;
+    // max-height: 100vh;
 
     // transition: max-height .5s ease-in-out;
-    &.reveal {
-      max-height: 100vh;
-    }
+    // &.reveal {
+    //   max-height: 100vh;
+    // }
 
     .text {
       align-self: center;
